index updation and changed home page from home file to index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkyServe Hosting</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -21,10 +21,10 @@
             <div class="hamburger" id="hamburger">&#9776;</div>
             <!-- Navigation links -->
             <div class="navigation-content" id="nav-menu">
-                <a id="home-btn" href="home.html">Home</a>
-                <a id="about-btn" href="about.html">About</a>
-                <a id="plans-btn" href="plans.html">Plans</a>
-                <a id="contact-btn" href="contact.html">Contact</a>
+                <a id="home-btn" href="index.html">Home</a>
+                <a id="about-btn" href="pages/about.html">About</a>
+                <a id="plans-btn" href="pages/plans.html">Plans</a>
+                <a id="contact-btn" href="pages/contact.html">Contact</a>
             </div>
         </div>
     </header>
@@ -143,10 +143,10 @@
 
             <!-- Footer Navigation Links -->
             <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">Plans</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="pages/plans.html">Plans</a>
+                <a href="pages/about.html">About</a>
+                <a href="pages/contact.html">Contact</a>
             </div>
 
             <!-- Social Media Icons -->
@@ -165,7 +165,7 @@
     </footer>
 
     <!-- External JavaScript file -->
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
