--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
 
             <!-- Navigation links -->
             <div class="navigation-content" id="nav-menu">
-                <a id="home-btn" href="home.html">Home</a>
+                <a id="home-btn" href="../index.html">Home</a>
                 <a id="about-btn" href="about.html">About</a>
                 <a id="plans-btn" href="plans.html">Plans</a>
                 <a id="contact-btn" href="contact.html">Contact</a>
@@ -110,10 +110,10 @@
 
             <!-- Footer Links -->
             <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">Plans</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="plans.html">Plans</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <!-- Social Media Icons -->
