--- a/pages/plans.html
+++ b/pages/plans.html
@@ -24,7 +24,7 @@
 
             <!-- Navigation Links -->
             <div class="navigation-content" id="nav-menu">
-                <a href="home.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="plans.html">Plans</a>
                 <a href="contact.html">Contact</a>
@@ -114,10 +114,10 @@
 
             <!-- Footer Navigation Links -->
             <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">Plans</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="plans.html">Plans</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <!-- Footer Social Media Icons -->
