--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
             <div class="hamburger" id="hamburger">&#9776;</div>
             <!-- Navigation links -->
             <div class="navigation-content" id="nav-menu">
-                <a href="home.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="about.html" class="active">About</a>
                 <a href="plans.html">Plans</a>
                 <a href="contact.html">Contact</a>
@@ -123,10 +123,10 @@
 
             <!-- Footer Navigation Links -->
             <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">Plans</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="plans.html">Plans</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <!-- Social Media Icons -->
