image url update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="intro-image">
                 <span class="bg-arrow2">&gt;</span>
                 <span class="bg-arrow3">&gt;</span>
-                <img src="../assets/server.png" alt="Web Hosting Illustration">
+                <img src="/assets/server.png" alt="Web Hosting Illustration">
             </div>
         </div>
     </section>
