--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li><span class="tick">✔</span> Daily Backups</li>
                     <li><span class="tick">✔</span> 24/7 Support</li>
                 </ul>
-                <button class="price-button">Start Now<span>&#8594;</span></button>
+                <button class="price-button" onclick="location.href='pages/plans.html#plansection'">Start Now<span>&#8594;</span></button>
             </div>
             <!-- Pro Plan (highlighted) -->
             <div class="plan highlight">
@@ -97,7 +97,7 @@
                     <li><span class="tick">✔</span> Unlimited Bandwidth</li>
                     <li><span class="tick">✔</span> 24/7 Support</li>
                 </ul>
-                <button class="price-button">Start Now<span>&#8594;</span></button>
+                <button class="price-button" onclick="location.href='pages/plans.html#plansection'">Start Now<span>&#8594;</span></button>
             </div>
             <!-- Enterprise Plan -->
             <div class="plan">
@@ -111,7 +111,7 @@
                     <li><span class="tick">✔</span> Hourly Backups</li>
                     <li><span class="tick">✔</span> Priority Support</li>
                 </ul>
-                <button class="price-button">Start Now<span>&#8594;</span></button>
+                <button class="price-button" onclick="location.href='pages/plans.html#plansection'">Start Now<span>&#8594;</span></button>
             </div>
         </div>
     </section>
