--- a/pages/plans.html
+++ b/pages/plans.html
@@ -57,7 +57,7 @@
                     <li><span class="tick">✔</span> 1 Website Hosting</li>
                     <li><span class="tick">✔</span> 10 Email Accounts</li>
                 </ul>
-                <button class="price-button">Start Now<span>&#8594;</span></button>
+                <button class="price-button" onclick="location.href='contact.html'">Start Now<span>&#8594;</span></button>
             </div>
 
             <!-- PRO Plan (Highlighted as Most Popular) -->
@@ -78,7 +78,7 @@
                         <li><span class="tick">✔</span> 50 Email Accounts</li>
                         <li><span class="tick">✔</span> Free Domain for 1 Year</li>
                     </ul>
-                    <button class="price-button">Start Now<span>&#8594;</span></button>
+                    <button class="price-button" onclick="location.href='contact.html'">Start Now<span>&#8594;</span></button>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                     <li><span class="tick">✔</span> Dedicated IP Address</li>
                     <li><span class="tick">✔</span> Website Migration Support</li>
                 </ul>
-                <button class="price-button">Start Now<span>&#8594;</span></button>
+                <button class="price-button" onclick="location.href='contact.html'">Start Now<span>&#8594;</span></button>
             </div>
         </div>
     </section>
